--- a/css/styles.css
+++ b/css/styles.css
@@ -639,14 +639,15 @@ section {
 }
 
 .doctor-image img {
-  width: 100%;
-  height: 100%;
+  width: 150px;
+  height: 150px;
   object-fit: cover;
+  border-radius: 50%;
 }
 
 .doctor-placeholder {
-  width: 80px;
-  height: 80px;
+  width: 150px;
+  height: 150px;
   background: var(--primary-color);
   border-radius: 50%;
   display: flex;
